--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Django~=5.0.7
 gunicorn~=22.0
 whitenoise~=6.7
+coverage>=7.3.0
+pytest>=7.4.0
+pytest-django>=4.5.0
+pytest-cov>=4.1.0
+flake8>=6.1.0
+black>=23.9.0
