--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,16 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# IDE / editors
+.idea/
+.vscode/
+
+# Local DBs
+db.sqlite3
+*.sqlite3
+*.sqlite3-shm
+*.sqlite3-wal
+
 # PyInstaller
 #   Usually these files are written by a python script from a template
 #   before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -81,6 +91,11 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+
+# Python build/cache
+__pycache__/
+*.py[cod]
+*$py.class
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
