fix github actions permissions

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy to Render
     runs-on: ubuntu-latest
     environment: production
+    permissions:
+      contents: write
+      deployments: write
     
     steps:
       - name: Checkout code
@@ -141,12 +144,19 @@ jobs:
             [View Live Site](${appUrl}) | [Render Dashboard](https://dashboard.render.com)
             `;
             
-            await github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: message
-            });
+            // Try to create a commit comment
+            try {
+              await github.rest.repos.createCommitComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: context.sha,
+                body: message
+              });
+              console.log('✅ Commit comment created successfully');
+            } catch (error) {
+              console.log('⚠️ Could not create commit comment:', error.message);
+              console.log('Deployment status:', status);
+            }
 
       - name: Create GitHub deployment
         if: success()
@@ -154,25 +164,30 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const deployment = await github.rest.repos.createDeployment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.sha,
-              environment: 'production',
-              description: 'Deployed to Render',
-              auto_merge: false,
-              required_contexts: []
-            });
-            
-            if (deployment.data) {
-              await github.rest.repos.createDeploymentStatus({
+            try {
+              const deployment = await github.rest.repos.createDeployment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                deployment_id: deployment.data.id,
-                state: 'success',
-                environment_url: '${{ secrets.RENDER_APP_URL }}',
-                description: 'Deployment successful'
+                ref: context.sha,
+                environment: 'production',
+                description: 'Deployed to Render',
+                auto_merge: false,
+                required_contexts: []
               });
+              
+              if (deployment.data) {
+                await github.rest.repos.createDeploymentStatus({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  deployment_id: deployment.data.id,
+                  state: 'success',
+                  environment_url: '${{ secrets.RENDER_APP_URL }}',
+                  description: 'Deployment successful'
+                });
+                console.log('✅ GitHub deployment created successfully');
+              }
+            } catch (error) {
+              console.log('⚠️ Could not create GitHub deployment:', error.message);
             }
 
       - name: Deployment summary
