--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ addopts =
     --cov-report=html
     --cov-report=xml
     --cov-config=.coveragerc
-testpaths = home search
+testpaths = home search tests
 markers =
     slow: marks tests as slow
     integration: marks tests as integration tests
