--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,6 @@ jobs:
     name: AI Code Review
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
-    permissions:
-      pull-requests: write
-      contents: read
     
     steps:
       - name: Checkout code
@@ -40,9 +37,9 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/github-script@v7
         env:
-          OPENAI_API_KEY: ${{ secrets.OPEN_AI_KEY }}
+          OPEN_AI_KEY: ${{ secrets.OPEN_AI_KEY }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const https = require('https');
