--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,7 @@ jobs:
     name: AI Code Review
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
-    permissions:
-      pull-requests: write
-      contents: read
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,6 +36,8 @@ jobs:
       - name: AI Code Review with OpenAI
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/github-script@v7
+        env:
+          OPEN_AI_KEY: ${{ secrets.OPEN_AI_KEY }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -71,7 +70,7 @@ jobs:
                   method: 'POST',
                   headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${process.env.OPENAI_API_KEY}`,
+                    'Authorization': `Bearer ${process.env.OPEN_AI_KEY}`,
                     'Content-Length': data.length
                   }
                 };
@@ -130,10 +129,6 @@ jobs:
   test-and-coverage:
     name: Run Tests & Coverage
     runs-on: ubuntu-latest
-
-    env:
-      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-      DJANGO_DEBUG: "false"
 
     steps:
       - name: Checkout code
@@ -197,7 +192,7 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.OPEN_AI_KEY }}
+          github-token: ${{ Secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const { execSync } = require('child_process');
