--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -33,9 +33,10 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install OpenAI package
+      - name: Install OpenAI + compatible httpx
         run: |
-          pip install openai==1.3.0
+          python -m pip install --upgrade pip
+          pip install "openai==1.3.0" "httpx<0.28"
 
       - name: Perform AI Code Review
         env:
