--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -33,17 +33,11 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install OpenAI + force compatible httpx
+      - name: Install OpenAI SDK (correct)
         run: |
           python -m pip install --upgrade pip
+          pip install --no-cache-dir "openai>=1.30.0"
 
-          # Force-remove any preinstalled httpx
-          pip uninstall -y httpx || true
-
-          # Install known-compatible versions
-          pip install --no-cache-dir "openai==1.3.0" "httpx<0.28"
-          
-          # Debug proof (shows exact versions)
           python - << 'EOF'
           import openai, httpx
           print("openai version:", openai.__version__)
